# saorsa-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: integration-core.yml  integration-network.yml  lint.yml  release.yml  rust.yml  unit-tests.yml
.planning/: ARCHITECTURE-ENCRYPTION.md  MILESTONES.md  PHASE_2_TASK_1_FIXES_APPLIED.md  PLAN-phase-1.md  PLAN-phase-2.md  PROJECT.md  REVIEW_CYCLE_COMPLETE.md  baseline-measurements.md  progress.md
.planning/architecture-analysis/: 01-direct-p2p-flow.md  02-dht-storage.md  04-routing-strategy.md  06-forward-secrecy.md  07-encryption-layers.md  08-synthesis.md
.planning/reviews/: build-iteration-2.md  code-quality.md  codex.md  complexity.md  consensus-phase2-task1-20260129-140700.md  consensus-phase2-task2-20260129-132327.md  iteration-2-fixes-applied.md  minimax.md  security-iteration-2.md  security.md  test-coverage.md
.planning/solution-design/: 02-binary-encoding-migration.md
benches/: adaptive_network_bench.rs  dht_benchmark.rs  eigentrust_bench.rs  integration_benchmarks.rs  security_benchmark.rs  validation_bench.rs
docs/: API.md  REPLICATION_DESIGN.md  ROUTING_TABLE_DESIGN.md  UPLOAD_FLOW_DESIGN.md  trust-signals-api.md
docs/adr/: ADR-001-multi-layer-architecture.md  ADR-002-delegated-transport.md  ADR-003-pure-post-quantum-crypto.md  ADR-004-four-word-addresses.md  ADR-005-skademlia-witness-protocol.md  ADR-008-bootstrap-delegation.md  ADR-009-sybil-protection.md  ADR-012-identity-without-pow.md  ADR-014-proactive-relay-first-nat-traversal.md  ADR-015-repository-ownership.md  README.md
docs/examples/: saorsa-node-trust-integration.md
docs/infrastructure/: INFRASTRUCTURE.md
examples/: dht_performance_demo.rs  security_example.rs
src/: address.rs  bgp_geo_provider.rs  config.rs  control.rs  dht_network_manager.rs  encrypted_key_storage.rs  error.rs  geographic_enhanced_network.rs  key_derivation.rs  lib.rs  logging.rs  metric_event.rs  metrics_emitter.rs  monotonic_counter.rs  network.rs  peer_record.rs  persistent_state.rs  prelude.rs  production.rs  rate_limit.rs  security.rs  self_address.rs  transport.rs  transport_handle.rs  types.rs  validation.rs
src/adaptive/: churn.rs  churn_prediction.rs  client.rs  component_builders.rs  coordinator.rs  coordinator_extensions.rs  coordinator_extensions_tests.rs  dht.rs  dht_integration.rs  gossip.rs  hyperbolic.rs  hyperbolic_enhanced.rs  hyperbolic_greedy.rs  identity.rs  learning.rs  mod.rs  monitoring.rs  multi_armed_bandit.rs  q_learning_cache.rs  replica_planner.rs  replication.rs  retrieval.rs  routing.rs  security.rs  som.rs  storage.rs  storage_integration_test.rs  transport.rs  trust.rs
src/bootstrap/: cache.rs  contact.rs  manager.rs  mod.rs
src/dht/: authenticated_sibling_broadcast.rs  capacity_signaling.rs  collusion_detector.rs  core_engine.rs  core_engine_test.rs  cross_network_replication.rs  enhanced_storage.rs  geographic_network_integration.rs  geographic_routing.rs  geographic_routing_table.rs  ipv4_identity.rs  ipv6_identity.rs  latency_aware_selection.rs  mod.rs  network_integration.rs  node_age_verifier.rs  node_failure_tracker.rs  optimized_storage.rs  performance_benchmark.rs  replication_grace_period.rs  security_tests.rs  skademlia.rs  sybil_detector.rs  trust_peer_selector.rs  trust_weighted_dht.rs  trust_weighted_kademlia.rs
src/dht/metrics/: dht_metrics.rs  mod.rs  placement_metrics.rs  security_dashboard.rs
src/dht/routing_maintenance/: close_group_validator.rs  config.rs  eviction.rs  liveness.rs  mod.rs  refresh.rs  scheduler.rs  security_coordinator.rs  validator.rs
src/events/: mod.rs
src/fwid/: mod.rs
src/health/: README.md  business_metrics.rs  checks.rs  endpoints.rs  metrics.rs  metrics_registry.rs  mod.rs
src/identity/: cli.rs  cli_handler.rs  fitness.rs  four_words.rs  four_words_error_tests.rs  four_words_extensions.rs  mod.rs  node_identity.rs  node_identity_extensions.rs  peer_id.rs  regeneration.rs  rejection.rs  restart.rs  secure_node_identity.rs  targeting.rs
src/identity_manager/: migration.rs
src/mls/: mod.rs
src/persistence/: encryption.rs  metrics.rs  mod.rs
src/placement/: algorithms.rs  dht_records.rs  errors.rs  mod.rs  orchestrator.rs  traits.rs  types.rs
src/quantum_crypto/: ml_dsa.rs  ml_kem.rs  mod.rs  saorsa_transport_integration.rs  types.rs
src/reachability/: acquisition.rs  classifier.rs  driver.rs  mod.rs  monitor.rs  probe.rs  session.rs
src/telemetry/: mod.rs
src/threshold/: mod.rs
src/transport/: ant_quic_adapter.rs  dht_handler.rs  external_addresses.rs  network_config.rs  observed_address_cache.rs  saorsa_transport_adapter.rs
src/upgrade/: manifest.rs  mod.rs  rollback.rs  staged.rs  verifier.rs
tests/: accept_loop_stress.rs  adaptive_always_available_test.rs  adaptive_components_corrected_test.rs  adaptive_components_test.rs  adaptive_integration_tests.rs  adaptive_network_integration_test.rs  chaos_engineering_tests.rs  config_test.rs  connection_lifecycle_integration_test.rs  connection_lifecycle_proof_test.rs  coordinator_integration_test.rs  dht_connectivity_diagnostic_test.rs  dht_core_operations_test.rs  dht_cross_node_discovery_test.rs  dht_cross_node_test.rs  dht_get_comprehensive_test.rs  dht_node_mode_gating_test.rs  dht_parallel_replication_e2e_test.rs  dht_peer_address_population_test.rs  dht_property_tests.rs  dht_replication_diagnostic_test.rs  dht_replication_e2e_test.rs  dht_self_advertisement.rs  dual_stack_security_integration_test.rs  eigentrust_integration_test.rs  end_to_end_scenarios_test.rs  four_word_integration_test.rs  full_network_simulation.rs  geoip_integration_test.rs  gossipsub_integration_test.rs  health_integration_test.rs  hyperbolic_greedy_test.rs  hyperbolic_routing_test.rs  identity_cli_test.rs  iterative_dht_lookup_test.rs  masque_relay_e2e.rs  metric_event_channel_test.rs  multi_armed_bandit_integration_test.rs  network_error_tests.rs  network_integration_comprehensive_test.rs  (+25 more)
